@@ -41,7 +41,7 @@ basis(c("UO2+2", "SO4-2", "Na+", "Cl-", "H+", "H2O", "O2"))
 basis(c("Na+", "Cl-"), c(logm_Naplus, logm_Clminus))
 species(iaq, logm_U)
 species(icr, add = TRUE)
-bases <- c("SO4-2", "HSO4-", "HS-", "H2S")
+bases <- c("H2S", "HS-", "S3-", "SO2", "HSO4-", "SO4-2")
 m <- suppressWarnings(mosaic(bases, pH = c(pH_lim, res), "SO4-2" = c(CS_lim, res), T = T, P = P, IS = IS))
 diagram(m$A.species)
 diagram(m$A.bases, add = TRUE, col = 8, lty = 2, col.names = 8, italic = TRUE)
